# Claude-Slack-Workspace

./: README.md  pyproject.toml  visualize_game_of_life.py
src/: __init__.py  __main__.py  cli.py  game_of_life.py
tests/: __init__.py  test_game_of_life.py
